2005-11-07  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/divide.s: Test line comment starting with '/'.
	* gas/i386/divide.d: Pass --divide to gas.
	* gas/i386/intelok.d: Likewise.
	* gas/i386/i386.exp (divide): Run for all targets.

2005-11-07  Arnold Metselaar <arnold.metselaar@planet.nl>

	* gas/z80/z80.exp: Added "suffix" test.
	* gas/z80/suffix.s: New file.
	* gas/z80/suffix.d: New file.

2005-11-04  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/padlock.d: Support 64bit BFD.

2005-11-04  Alexandre Oliva  <aoliva@redhat.com>

	* gas/all/gas.exp: Remove weakref xfail.  Run weakref4.s.
	* gas/all/weakref1.s: Move redefinition bits to...
	* gas/all/weakref4.s: ... new file.
	* gas/all/weakref1.d: Remove command moved to weakref1u.  Adjust
	remaining command for leading tabs.  Regenerate.
	* gas/all/weakref1l.d: Regenerate.
	* gas/all/weakref1u.d: Likewise.
	* gas/all/wealref1w.d: Likewise.

2005-11-04  Jan Beulich  <jbeulich@novell.com>

	* gas/all/gas.exp: xfail weakref dump tests for all targets.

2005-10-29  Hans-Peter Nilsson  <hp@axis.com>

	PR gas/1630
	* gas/all/gas.exp <weakref1, weakref1g, weakref1l, weakref1u,
	weakref1w>: Xfail for cris-*-* and mmix-*-*.

2005-10-27  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/equ.d: Fix typo.
	* gas/i386/equ.s: Don't globalize r.

2005-10-27  Jan Beulich  <jbeulich@novell.com>

	* gas/all/gas.exp: Don't xfail equiv1 test anymore.

2005-10-26  Paul Brook  <paul@codesourcery.com>

	* gas/arm/archv6.d: Adjust expected output.

2005-10-26  Jan Beulich  <jbeulich@novell.com>

	* gas/i386/intel.s: Replace register used in offset expression.
	* gas/i386/intel.e: Adjust.
	* gas/i386/intelbad.l: Adjust.
	* gas/i386/equ.[sed]: New.
	* gas/i386/i386.exp: Run new test.

2005-10-26  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/z80/z80.exp: Fix misplaced-open-brace typo.

2005-10-25  Arnold Metselaar  <arnold.metselaar@planet.nl>

	* gas/all/gas.exp: Exclude Z80-*-* from floating point, string,
	and cofftag test.